--- a/instruction.html
+++ b/instruction.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Локальный сервер Rust</title>
-    <link rel="stylesheet" href="instruction.css"> 
+    <link rel="stylesheet" href="instruction.css">
+    <link rel="icon" href="images/rust-icon.svg" type="image/svg">
 </head>
 
 <body>
