change outer-box width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img class="img-scrap" src="images/rust-name.png">
+    <img class="img-logo" src="images/rust-name.png">
 
 
 
