Поместил картинку в блок
Поместил картинку в блок, вместо простой картинки, чтобы проверить будет ли блок изменяться на мобильном устройстве

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <img class="img-logo" src="images/rust-name.png">
+    <div class="img-logo">
+        <img src="images/rust-name.png">
+    </div>
 
 
 
