Доделал страницу с настройками графики
Доделал все главы и оформление для страницы с настройками графики для Rust
Добавил css стиль для картинок внутри outer-box

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <div class="outer-box">
-        <a href="html-pages/"><h2>Настройки графики</h2></a>
+        <a href="html-pages/graphics-configurate.html"><h2>Настройки графики</h2></a>
 
         <p class="default-text">
             В данной статье приведены настройки графики Rust для условных конфигураций компьютеров.
