--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Локальный сервер Rust</title>
+    <title>Сборник статей Rust</title>
     <link rel="stylesheet" href="css/instruction.css">
     <link rel="icon" href="images/rust-icon.svg" type="image/svg">
 </head>
 
 <body>
+    <!-- Лого Rust -->
+
     <div class="img-logo">
         <img src="images/rust-logo-name.png">
     </div>
 
 
 
-
+    <!-- Тема статьи -->
 
     <div class="outer-box">
         <h2>Сборник полезных статей для игры Rust</h2>
@@ -28,7 +30,7 @@
 
 
 
-
+    <!-- Статья с инструкцией по установке локального сервера Rust -->
 
     <div class="outer-box">
         <a href="html-pages/locale-server-instruction.html"><h2>Локальный сервер</h2></a>
@@ -44,7 +46,7 @@
 
 
 
-
+    <!-- Статья с настройками графики Rust для разных ПК -->
 
     <div class="outer-box">
         <a href="html-pages/graphics-configurate.html"><h2>Настройки графики</h2></a>
