--- a/html-pages/graphics-configurate.html
+++ b/html-pages/graphics-configurate.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Локальный сервер Rust</title>
+    <title>Настройки графики Rust</title>
     <link rel="stylesheet" href="../css/instruction.css">
     <link rel="icon" href="../images/rust-icon.svg" type="image/svg">
 </head>
 
 <body>
+    
+    <!-- Лого Rust -->
+
     <div class="img-logo">
         <img src="../images/rust-logo-name.png">
     </div>
 
 
 
-
+    <!-- Тема статьи -->
 
     <div class="outer-box">        
         <h2>Конфигурации настроек графики для разных ПК</h2>
@@ -28,7 +31,7 @@
 
 
 
-
+    <!-- Содержание статьи -->
 
     <div class="outer-box">
         <h2>Содержание:</h2>
@@ -238,6 +241,7 @@
 
 
     <div class="outer-box">
+
         <!-- Вторая глава -->
 
         <h1 id="section-2">2 Рекомендованные настройки графики</h1>
