--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Лого Rust -->
   
     <div class="img-logo">
-        <img src="../images/rust-logo-name.png">
+        <img src="images/rust-logo-name.png">
     </div>
 
 
